--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,5 @@ updates:
   - package-ecosystem: "maven" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
+      interval: "daily"
+
